--- a/PersonalBudget/PersonalBudget.Api.csproj
+++ b/PersonalBudget/PersonalBudget.Api.csproj
@@ -9,4 +9,8 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Services\" />
+  </ItemGroup>
+
 </Project>
