--- a/PersonalBudget/PersonalBudget.Api.csproj
+++ b/PersonalBudget/PersonalBudget.Api.csproj
@@ -13,4 +13,10 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\PersonalBudget.Core\PersonalBudget.Core.csproj" />
+    <ProjectReference Include="..\PersonalBudget.EntityFrameworkCore\PersonalBudget.EntityFrameworkCore.csproj" />
+    <ProjectReference Include="..\PersonalBudget.Helper\PersonalBudget.Helper.csproj" />
+  </ItemGroup>
+
 </Project>
