--- a/PersonalBudget.EntityFrameworkCore/PersonalBudget.EntityFrameworkCore.csproj
+++ b/PersonalBudget.EntityFrameworkCore/PersonalBudget.EntityFrameworkCore.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Migrations\**" />
+    <EmbeddedResource Remove="Migrations\**" />
+    <None Remove="Migrations\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="3.0.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="3.0.1" />
@@ -12,10 +18,6 @@
 
   <ItemGroup>
     <ProjectReference Include="..\PersonalBudget.Core\PersonalBudget.Core.csproj" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <Folder Include="Migrations\" />
   </ItemGroup>
 
 </Project>
