--- a/PersonalBudget/PersonalBudget.Api.csproj
+++ b/PersonalBudget/PersonalBudget.Api.csproj
@@ -14,6 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\PersonalBudget.Application\PersonalBudget.Application.csproj" />
     <ProjectReference Include="..\PersonalBudget.Core\PersonalBudget.Core.csproj" />
     <ProjectReference Include="..\PersonalBudget.EntityFrameworkCore\PersonalBudget.EntityFrameworkCore.csproj" />
     <ProjectReference Include="..\PersonalBudget.Helper\PersonalBudget.Helper.csproj" />
